# pystempel_fork

./: pyproject.toml
src/pystempel/: stemmer.py
