[tool.poetry]
name = "pystempel"
version = "2.0.0"
packages = [ {include = "pystempel", from= "src"}]
exclude = ["**/*.tbl"]
license = "See documentation"
readme = "README.rst"
description = "Polish stemmer."
authors = ["Maciej Gawinecki <mgawinecki@gmail.com>"]
classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Science/Research",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Scientific/Engineering :: Human Machine Interfaces",
        "Topic :: Scientific/Engineering :: Information Analysis",
        "Topic :: Text Processing",
        "Topic :: Text Processing :: General",
        "Topic :: Text Processing :: Linguistic"
]
keywords = [
    "NLP",
    "natural language processing",
    "computational linguistics",
    "stemming",
    "linguistics",
    "language",
    "natural language",
    "text analytics",
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
tqdm = "^4.68.4"
sortedcontainers = "^2.4.0"
cffi = {path = "../pystempel_fork/cffi-1.16.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", develop = true}
pyzmq = {path = "../pystempel_fork/pyzmq-26.0.3-cp312-cp312-manylinux_2_28_x86_64.whl", develop = true}

[tool.poetry.group.dev.dependencies]
pyjnius = "^1.7.0"
smart-open = "^8.0.0"
tqdm = "^4.68.4"
jupyterlab = "^4.6.1"
pandas = "^3.0.3"
matplotlib = "^3.11.0"
twine = "^6.2.0"
pre-commit = "^4.6.0"
pytest = "^9.1.1"
black = "^26.5.1"

[build-system]
requires = ["poetry-core>=2.4.1"]
build-backend = "poetry.core.masonry.api"
