[project]
name = "Pystempel_fork"
version = "2.0.0"
description = "Polish stemmer."
authors = [{ name = "Maciej Gawinecki", email = "mgawinecki@gmail.com" }]
requires-python = ">=3.13.12"
readme = "README.rst"
keywords = [
    "NLP",
    "natural language processing",
    "computational linguistics",
    "stemming",
    "linguistics",
    "language",
    "natural language",
    "text analytics",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tqdm>=4.68.4,<5",
    "sortedcontainers>=2.4.0,<3",
]

[dependency-groups]
dev = [
    "pyjnius>=1.7.0,<2",
    "smart-open>=8.0.0,<9",
    "tqdm>=4.68.4,<5",
    "jupyterlab>=4.6.1,<5",
    "pandas>=3.0.3,<4",
    "matplotlib>=3.11.0,<4",
    "twine>=6.2.0,<7",
    "pre-commit>=4.6.0,<5",
    "pytest>=9.1.1,<10",
    "black>=26.5.1,<27",
    "jupyter-core>=5.9.1,<6",
    "argon2-cffi-bindings>=25.1.0",
    "cryptography>=49.0.0",
    "cffi",
    "pyzmq"
]

[tool.uv]
default-groups = "all"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.extra-build-dependencies]
pystempel-fork = ["hatchling"]

[tool.hatch.build.targets.sdist]
include = ["src/pystempel"]
exclude = ["**/*.tbl"]

[tool.hatch.build.targets.wheel]
include = ["src/pystempel"]
exclude = ["**/*.tbl"]

[tool.hatch.build.targets.wheel.sources]
"src/pystempel" = "pystempel"


